# mpsp-portal

./: .env.example  .gitignore  Cargo.toml  README.md  dev.bat  docker-compose.yml
migrations/2026-05-18-093438-0000_create_users/: down.sql  up.sql
migrations/2026-05-27-100355-0000_create_receivers/: down.sql  up.sql
migrations/2026-05-28-062210-0000_create_config/: down.sql  up.sql
src/: aliyun.rs  db.rs  error.rs  lib.rs  main.rs  routers.rs  schema.rs  utils.rs
src/handlers/: auth.rs  config.rs  mod.rs  omics.rs  receiver.rs  user.rs
src/middlewares/: api_auth.rs
src/models/: config.rs  mod.rs  omics.rs  receiver.rs  user.rs
web/: .env.example  .gitignore  .prettierignore  README.md  index.html  package.json  vite.config.ts
web/output/: builder.R
web/public/: site.webmanifest
web/src/: main.ts
web/src/components/: VuesticLogo.vue
web/src/components/app-layout-navigation/: AppLayoutNavigation.vue
web/src/components/navbar/: AppNavbar.vue
web/src/components/sidebar/: AppSidebar.vue  NavigationRoutes.ts
web/src/data/pages/: auth.ts  bills.ts  config.ts  omics.ts  projects.ts  receivers.ts  users.ts
web/src/i18n/locales/: cn.json  gb.json
web/src/layouts/: AppLayout.vue  AuthLayout.vue
web/src/pages/: 404.vue  Index.vue  Order.vue
web/src/pages/auth/: Login.vue  types.ts
web/src/pages/faq/: FaqPage.vue
web/src/pages/omics/: DNA.vue  Protein.vue  (+5 more)
web/src/router/: index.ts
web/src/services/: api.ts  utils.ts
web/src/stores/: admin-bills.ts  admin-omics.ts  admin-projects.ts  auth.ts  omics.ts  projects.ts  receivers.ts  users.ts
(+76 files in other folders)
